2015-12-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Inquiry.cs:
	  Fixes decoding for devices that follow old 5-byte SCSI
	  INQUIRY format.

	* SCSI/Sense.cs:
	  Fixes printing of sense block missing a newline.

2015-12-14  Natalia Portillo  <claunia@claunia.com>

	* CD/ATIP.cs:
	  Checked more information, GCK is Grupo Condor S.L. from
	  Spain.

2015-12-13  Natalia Portillo  <claunia@claunia.com>

	* CD/ATIP.cs:
	  Added manufacturer code for a GCK disc I just came upon.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Sense.cs:
	  Additional length may be bigger than provided buffer.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* DVD/PFI.cs:
	* DVD/Enums.cs:
	  Added HD DVD types.

	* SCSI/Sense.cs:
	  Solved SCSI sense decoding.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* CD/ATIP.cs:
	  Added disc type and manufacturer lookup from ATIP.

	* CD/PMA.cs:
	  Implement full PMA decoding.

	* CD/FullTOC.cs:
	  Implement decoding disc ID.

	* SCSI/MMC/DiscInformation.cs:
	  Disc ID is 24-bit.

	* CD/CDTextOnLeadIn.cs:
	  CD-TEXT can be empty without being null, do not decode an
	  empty one.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* CD/CDTextOnLeadIn.cs:
	  Finally CD-Text on lead-in is getting decoded correctly...

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* CD/FullTOC.cs:
	  Enhanced prettify to be more verbose.

	* CD/TOC.cs:
	  Corrected typo.

2015-12-03  Natalia Portillo  <claunia@claunia.com>

	* CD/TOC.cs:
	* CD/FullTOC.cs:
	  Added support for CD-V.
	Added support for CD-DA.

	* CD/Enums.cs:
	  Added support for CD-V.

2015-12-03  Natalia Portillo  <claunia@claunia.com>

	* DVD/PFI.cs:
	* DVD/Enums.cs:
	  Added support for Nintendo GOD and WOD.

2015-12-03  Natalia Portillo  <claunia@claunia.com>

	* Xbox/DMI.cs:
	* DiscImageChef.Decoders.csproj:
	  Added decoding of XGD2 and XGD3 DMI.

2015-12-02  Natalia Portillo  <claunia@claunia.com>

	* DVD/PFI.cs:
	* DVD/Enums.cs: